# exprom-l

./: .gitignore  pyproject.toml
exprom/: db.sqlite3  docker-compose.yml
exprom/apps/catalog/: admin.py  apps.py  models.py  signals.py  tests.py  urls.py  views.py
exprom/apps/catalog/forms/: flatpages.py  model_forms.py  widgets.py
exprom/apps/catalog/migrations/: 0001_initial.py  0002_remove_category_slug.py  0003_category_slug.py  0004_alter_category_name.py  0005_alter_category_name_alter_category_slug.py  0006_product_name_alter_category_slug_alter_product_slug.py
exprom/apps/catalog/static/catalog/css/: catalog.css  model.css
exprom/apps/catalog/templates/catalog/: all_models.html  catalog.html  catalog_items.html
exprom/apps/catalog/templatetags/: catalog_tags.py
exprom/apps/catalog/utils/: __init__.py  process_photo.py  slug.py  uploading.py
exprom/apps/fpages/: admin.py
exprom/apps/mainpage/: urls.py  views.py
exprom/apps/mainpage/static/mainpage/css/: footer.css  (+1 more)
exprom/apps/mainpage/templates/mainpage/: landing.html  popular_models.html
exprom/apps/telegram/: admin.py  apps.py  deps.py  exceptions.py  forms.py  handlers.py  managers.py  models.py  tests.py  urls.py  utils.py  views.py
exprom/config/: urls.py
exprom/config/settings/: base.py  ckeditor.py
exprom/templates/: footer.html  header.html  index.html  menu_categories.html  yandex_metric.html
exprom/templates/flatpages/: about.html  default.html
exprom/templates/modals/: order_modal.html  photo_modal.html  question_modal.html
exprom/templatetags/: all_pages_tags.py
(+13 files in other folders)
